demo/devops/deployments/locations.yaml
apiVersion: v1
kind: Service
metadata:
  name: locations
  namespace: demo
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
  selector:
    app: locations
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locations
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locations
  template:
    metadata:
      annotations:
        consul.hashicorp.com/connect-inject: 'true'
      labels:
        app: locations
    spec:
      containers:
        - image: nguyentrantrung/locations:latest
          imagePullPolicy: Always
          name: locations-container
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              memory: 125Mi
              cpu: 100m
      serviceAccountName: locations
